<resources>
    <string name="website_domain" translatable="false">http://www.panacea-soft.com</string>
    <string name="facebook_app_id" translatable="false">562722957863172</string>
    <string name="admob_banner_ads_key" translatable="false">ca-app-pub-8907881762519005/5130638022</string>
    <string name="google_map_api_key" translatable="false">AIzaSyCytIaXGU4XEwdDXRN8ZHp6_2qE3svEfac</string>
    <string name="adview_publisher_key" translatable="false">pub-8907881762519005</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="phone_login_phone_hint" translatable="false">+959121212121</string>
    <string name="history__title">History</string>
    <string name="title__activity_user_history_list">UserHistoryListActivity</string>
    <string name="favourite__title">Favourites</string>
    <string name="gallery__title">Gallery</string>
    <string name="gallery_img__desc">Image Description</string>
    <string name="image_default__image">Default Image</string>
    <string name="app__app_name" translatable="false">Admotors</string>
    <string name="app__ok">OK</string>
    <string name="app__cancel">Cancel</string>
    <string name="app__drawer_open">Drawer Open</string>
    <string name="app__drawer_close">Drawer Close</string>
    <string name="register__user_name">User Name</string>
    <string name="register__email">Email</string>
    <string name="register__password">Password</string>
    <string name="register__back_to_login">Already member ? Login</string>
    <string name="register__register">Register</string>
    <string name="register__check_option">Are you agreement this privacy and policy?</string>
    <string name="forgot_password__title">Forgot Password</string>
    <string name="forgot_password__email">Email</string>
    <string name="forgot_password__back_to_login">Already member ? Login</string>
    <string name="forgot_password__save">Save</string>
    <string name="forgot_password__send">Send</string>
    <string name="password_change__password">Password</string>
    <string name="password_change__save">Save</string>
    <string name="password_change__confirm_password">Confirm Password</string>
    <string name="password_change__password_change">Password Change</string>
    <string name="login__email">Email</string>
    <string name="login__password">Password</string>
    <string name="login__not_a_member_join_now">New here? Sign Up</string>
    <string name="login__forgot_your_password">Forgot password ?</string>
    <string name="login__login">SignIn</string>
    <string name="login__choice_text">OR</string>
    <string name="login__with_phone">SigIn with Phone</string>
    <string name="login__with_google">SignIn with Google</string>
    <string name="contact_us__name">Contact Name</string>
    <string name="contact_us__email">Contact Email</string>
    <string name="contact_us__message">Contact Message</string>
    <string name="contact_us__phone">Contact Phone</string>
    <string name="contact_us__submit">Submit</string>
    <string name="notification_setting__on_off">Notification Setting ( On/Off )</string>
    <string name="notification_setting__latest_message_from_system">Latest Message From System</string>
    <string name="notification__notification">Notification!</string>
    <string name="notification__title">Notification</string>
    <string name="notification_setting__title">Notification Setting</string>
    <string name="notification_detail__title">Notification Detail</string>
    <string name="notification__alert">Alert</string>
    <string name="language__language_change">Are you sure you want to change to %1$s?</string>
    <string name="language__title">Language</string>
    <string name="rating__list">Rating List</string>
    <string name="rating__write_review">Write Review</string>
    <string name="rating__total_count">%1$s Customer Reviews</string>
    <string name="rating__total_value">%1$s out of 5 stars</string>
    <string name="rating__percent">%1$s %%</string>
    <string name="rating__title">Title</string>
    <string name="rating__message">Message</string>
    <string name="rating__user_rating">User Rating Entry !</string>
    <string name="rating__your_rating">Your Rating</string>
    <string name="rating__five_star">5 star</string>
    <string name="rating__four_star">4 star</string>
    <string name="rating__three_star">3 star</string>
    <string name="rating__two_star">2 star</string>
    <string name="rating__one_star">1 star</string>
    <string name="dialog__title_m_mun">Sorting</string>
    <string name="popular__m_mun">Popular</string>
    <string name="recent__m_mun">Latest</string>
    <string name="char_asc__m_mun">A -> Z</string>
    <string name="char_desc__m_mun">Z -> A</string>
    <string name="edit_setting__notification_setting">Notification Setting</string>
    <string name="edit_setting__logout">Logout</string>
    <string name="edit_setting__logout_question">Are you sure to logout ? </string>
    <string name="edit_setting__terms_and_conditions">Terms and Conditions</string>
    <string name="edit_setting__app_info">App Info</string>
    <string name="edit_setting__title">Setting</string>
    <string name="message__loading">Loading…</string>
    <string name="message__please_wait">Please wait…</string>
    <string name="message__welcome">Welcome form PS Market Place</string>
    <string name="message__want_to_quit">Do you really want to quit?</string>
    <string name="message__ok_close">OK</string>
    <string name="message__cancel_close">Cancel</string>
    <string name="message__seller">From Sellers</string>
    <string name="message__buyer">From Buyers</string>
    <string name="search__notSet">Not Set</string>
    <string name="search__by_price">Price Range</string>
    <string name="search__lowest_price">Minimum</string>
    <string name="search__highest_price">Maximum</string>
    <string name="sf__manufacturer">Manufacturer</string>
    <string name="sf__model">Model</string>
    <string name="sf__transmission">Transmission</string>
    <string name="sf__color">Color</string>
    <string name="sf__fuelType">Fuel Type</string>
    <string name="sf__buildType">Build Type</string>
    <string name="sf__sellerType">Seller Type</string>
    <string name="sf__notSet">Not Set</string>
    <string name="sf__ByItemType">Listing Title</string>
    <string name="sf__Filter_Button">Filter</string>
    <string name="sf__Search_Button">Search</string>
    <string name="sf__price_type">Price Type</string>
    <string name="sf__item_condition">Item Condition</string>
    <string name="sf__type">Type</string>
    <string name="error_message__login_first">Please login first!</string>
    <string name="error_message__rating">Please fill completely for rating.</string>
    <string name="error_message__blank_email">Please input Email.</string>
    <string name="error_message__choose_manufacturer">Choose Manufacturer First</string>
    <string name="error_message__blank_contact_message">Please input Contact Message.</string>
    <string name="error_message__blank_password">Please enter the password.</string>
    <string name="error_message__blank_name">Please input name.</string>
    <string name="error_message__blank_phone_no">Please input the phone number.</string>
    <string name="error_message__password_not_equal">Password are not equal!</string>
    <string name="error_message__image_cannot_upload">Image cannot be Uploaded</string>
    <string name="error_message__item_cannot_upload">Item cannot be Uploaded</string>
    <string name="error_message__already_accept">Your item has already sold</string>
    <string name="error_message__to_check_agreement">You need to check an agreement of privacy and policy.</string>
    <string name="Feature_UI_Type__Button">Manufacturer</string>
    <string name="Feature_UI_Tune__Button">Filter And Sort</string>
    <string name="Feature_UI_Sort__Button">Filter with Map</string>
    <string name="Feature_UI__item_list_no_item_title">No Data</string>
    <string name="Feature_UI__item_list_no_item_desc">There is no result! Please try to adjust the filter.</string>
    <string name="Feature_UI__search_alert_manufacturer_title">Choose Manufacturer</string>
    <string name="Feature_UI__search_alert_model_title">Choose Model</string>
    <string name="Feature_UI__search_alert_type_title">Choose Item Type</string>
    <string name="Feature_UI__search_alert_price_type_title">Choose Item Price Type</string>
    <string name="Feature_UI__search_alert_condition_title">Choose Item Condition</string>
    <string name="Feature_UI__search_alert_location_title">Choose Item Location Option</string>
    <string name="Feature_UI__search_alert_currency_title">Choose Item Currency Option</string>
    <string name="Feature_UI__search_alert_deal_option_title">Choose Item Deal Option</string>
    <string name="Feature_UI__search_alert_transmission">Choose Transmission</string>
    <string name="Feature_UI__search_alert_color">Choose Color</string>
    <string name="Feature_UI__search_fuel_type">Choose Fuel Type</string>
    <string name="Feature_UI__search_build_type">Choose Build Type</string>
    <string name="Feature_UI__search_seller_type">Choose Seller Type</string>
    <string name="about_us__phone">Phone</string>
    <string name="about_us__facebook">Facebook</string>
    <string name="about_us__gplus">Google Plus</string>
    <string name="about_us__instagram">Instagram</string>
    <string name="about_us__youtube">Youtube</string>
    <string name="about_us__pinterest">Pinterest</string>
    <string name="about_us__twitter">Twitter</string>
    <string name="about_us__visit_website">Visit To Our Website</string>
    <string name="about_us__title">App Info</string>
    <string name="profile__title">Profile</string>
    <string name="profile__edit">Edit</string>
    <string name="profile__favourites">Favourites</string>
    <string name="profile__setting">Setting</string>
    <string name="profile__joined_on">Joined On</string>
    <string name="profile__see_all">View all</string>
    <string name="profile__verified">Verified</string>
    <string name="profile__followers">Followers</string>
    <string name="profile__following">Following</string>
    <string name="profile__listing">Listing</string>
    <string name="profile__follow">Follow</string>
    <string name="profile__unfollow">Unfollow</string>
    <string name="profile__joined">Joined - </string>
    <string name="profile__deactivate">Deactivate Account</string>
    <string name="profile__confirm_deactivate">Are you sure to Deactivate this account ?</string>
    <string name="edit_profile__title">Edit Profile</string>
    <string name="edit_profile__user_name">User Name</string>
    <string name="edit_profile__about_me">About Me</string>
    <string name="edit_profile__email">Email</string>
    <string name="edit_profile__password_change">Password Change</string>
    <string name="edit_profile__save">Save</string>
    <string name="edit_profile__phone">Phone</string>
    <string name="menu__home">Home</string>
    <string name="menu__profile">Profile</string>
    <string name="menu__favourite_items">Favourite</string>
    <string name="menu__user_history">User History</string>
    <string name="menu__logout">Logout</string>
    <string name="menu__contact_us">Contact Us</string>
    <string name="menu__language">Language</string>
    <string name="menu__setting">Setting</string>
    <string name="menu__app_setting">App</string>
    <string name="menu__user_info">User Info</string>
    <string name="menu__latest_item">Latest Items</string>
    <string name="menu__trending_item">Popular Items</string>
    <string name="menu__rate">Rate this app</string>
    <string name="menu__privacy_policy">Terms And Conditions</string>
    <string name="menu__manufacturer">Manufacturer</string>
</resources>